# avionicpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.context/: code-analysis.md  guidelines.md  mavlink-message-handling.md  nmea0183-message-handling.md  uart-processing.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci_coverage.yml  ci_linux_clang.yml  ci_linux_gcc.yml  ci_windows_msvc.yml
benchmarks/: CMakeLists.txt
benchmarks/mavlink/: CMakeLists.txt  main.cpp
benchmarks/nmea0183/: CMakeLists.txt  main.cpp
cmake/: boost-pfr.cmake  catch2.cmake  fakeit.cmake  google-benchmark.cmake  mavlink_c.cmake  minmea.cmake
patches/: minmea.patch
src/: CMakeLists.txt
src/mavlink/: CMakeLists.txt  checksum.hpp  deserializer.hpp  framer.hpp  serializer.hpp  types.hpp
src/mavlink/enumerations/: mav_autopilot.hpp  mav_cmd.hpp  mav_frame.hpp  mav_gps_fix_type.hpp  mav_mode_flag.hpp  mav_param_type.hpp  mav_protocol_capability.hpp  mav_result.hpp  mav_state.hpp  mav_sys_status_sensor.hpp  mav_type.hpp
src/mavlink/payloads/: CMakeLists.txt  attitude.hpp  attitude_quaternion.hpp  auth_key.hpp  autopilot_version.hpp  change_operator_control.hpp  change_operator_control_ack.hpp  command_ack.hpp  command_int.hpp  command_long.hpp  global_position_int.hpp  gps_raw_int.hpp  gps_status.hpp  heartbeat.hpp  local_position_ned.hpp  param_request_list.hpp  param_request_read.hpp  param_set.hpp  param_value.hpp  raw_imu.hpp  raw_pressure.hpp  rc_channels_raw.hpp  rc_channels_scaled.hpp  scaled_imu.hpp  scaled_pressure.hpp  sys_status.hpp  system_time.hpp  vfr_hud.hpp
src/nmea0183/: CMakeLists.txt  concepts.hpp  deserializer.hpp  enumerations.hpp  framer.hpp  serializer.hpp  types.hpp  utilities.hpp
src/nmea0183/payloads/: CMakeLists.txt  dtm.hpp  gbs.hpp  gga.hpp  gll.hpp  gns.hpp  gsa.hpp  gst.hpp  hdt.hpp  rmc.hpp  rot.hpp  vtg.hpp  zda.hpp
src/uart/: CMakeLists.txt  posixuart.cpp  posixuart.hpp  settings.hpp  stubuart.hpp  uart.hpp  win32uart.cpp  win32uart.hpp
tests/: CMakeLists.txt
tests/mavlink/: CMakeLists.txt  test_attitude.cpp  test_attitude_quaternion.cpp  test_auth_key.cpp  test_autopilot_version.cpp  test_change_operator_control.cpp  test_change_operator_control_ack.cpp  test_checksum.cpp  test_command_ack.cpp  test_command_int.cpp  test_command_long.cpp  test_global_position_int.cpp  test_gps_raw_int.cpp  test_gps_status.cpp  test_heartbeat.cpp  test_local_position_ned.cpp  test_param_request_list.cpp  test_param_request_read.cpp  test_param_set.cpp  test_param_value.cpp  test_raw_imu.cpp  test_raw_pressure.cpp  test_rc_channels_raw.cpp  test_rc_channels_scaled.cpp  test_scaled_imu.cpp  test_scaled_pressure.cpp  test_sys_status.cpp  test_system_time.cpp  test_vfr_hud.cpp
tests/nmea0183/: CMakeLists.txt  test_deserializer.cpp  test_dtm.cpp  test_framer.cpp  test_gbs.cpp  test_gga.cpp  test_gll.cpp  test_gns.cpp  test_gsa.cpp  test_gst.cpp  test_hdt.cpp  test_rmc.cpp  test_rot.cpp  test_serializer.cpp  test_utilities.cpp  test_utilities_extra.cpp  test_vtg.cpp  test_zda.cpp
tests/uart/: CMakeLists.txt  stubuarttests.cpp  test_posixuart.cpp  uartaccesstests.cpp  uartcommunicationtests.cpp  uartconfiguretests.cpp
tests/uart/mocks/: fakeuart.hpp
